desktop: switch DesktopApp to IDE frame + java plugin
- Register built-in java plugin on desktop startup

- Create default src roots + nanoj.yaml (applies java plugin, sets mainClass)

- Provide resource roots in DesktopProject

- Bind DesktopEditorManager as the project EditorManager

- Cleanly dispose project/services on window close